# rapidmq

./: README.md
docs/: architecture.md  quickstart.md
k8s/: namespaces.yaml
k8s/observability/: grafana-values.yaml  loki-values.yaml  mimir-values.yaml  otel-collector-values.yaml  tempo-values.yaml
k8s/rabbitmq/: cluster.yaml  operator-rbac-patch.yaml  topology.yaml
k8s/services/: node.yaml  python.yaml  springboot.yaml
scripts/: bootstrap.sh  build-images.sh  minikube-start.sh  minikube-stop.sh  port-forward-grafana.sh  port-forward-node.sh  port-forward-python.sh  port-forward-rabbitmqmgmt.sh  port-forward-spring.sh  teardown.sh  wait-for.sh
services/node/: Dockerfile  index.js  package-lock.json  package.json
services/python/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/springboot/: Dockerfile  pom.xml
services/springboot/src/main/java/de/ityreh/rapidmq/: RapidmqApplication.java
services/springboot/src/main/java/de/ityreh/rapidmq/messaging/: MessagingController.java  RabbitConsumer.java
services/springboot/src/main/java/de/ityreh/rapidmq/telemetry/: ContextPropagationConfiguration.java  InstallOpenTelemetryAppender.java  OpenTelemetryConfiguration.java  TraceIdFilter.java
services/springboot/src/main/resources/: application.yml  logback-spring.xml
