[project]
name = "rapidmq-python"
version = "0.1.0"
description = "RapidMQ Python example"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "aio-pika>=9.4",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.26.0",
]

[project.scripts]
rapidmq-python = "main:run"
